<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/content_show_background">

    <ImageView
        android:id="@+id/img_picture_content"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/anh1"/>

    <TextView
        android:id="@+id/tv_time_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/content_show_background_time_song_color"
        android:text="@string/content_show_time_song"
        android:textColor="@color/content_show_time_song_color"
        app:layout_constraintBottom_toBottomOf="@id/img_picture_content" />

    <TextView
        android:id="@+id/tv_name_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="@dimen/content_show_name_song_margin_top"
        android:text="@string/content_show_name_song"
        android:textColor="@color/content_show_name_song_color"
        app:layout_constraintTop_toBottomOf="@+id/img_picture_content" />

    <TextView
        android:id="@+id/tv_name_channel"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/content_show_guiline_left_margin_right"
        android:layout_marginTop="@dimen/content_show_name_channel_margin_top"
        android:text="@string/content_show_channel"
        android:textColor="@color/content_show_name_channel_color"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_song" />

    <TextView
        android:id="@+id/tv_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_show_name_channel_margin_top"
        android:text="@string/content_show_view"
        android:textColor="@color/content_show_name_channel_color"
        app:layout_constraintTop_toBottomOf="@id/tv_name_channel" />

    <TextView
        android:id="@+id/tv_post_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/content_show_post_time_margin_left"
        android:text="@string/content_show_post_time"
        android:textColor="@color/content_show_post_time"
        app:layout_constraintLeft_toRightOf="@id/tv_view"
        app:layout_constraintTop_toTopOf="@+id/tv_view" />
</android.support.constraint.ConstraintLayout>